--- a/Angular/base-demo/src/app/app.component.html
+++ b/Angular/base-demo/src/app/app.component.html
@@ -1,5 +1,9 @@
 <h1>{{ title }}</h1>
 
-<app-heros></app-heros>
+<nav>
+    <a routerLink="/heros">Heros</a>
+</nav>
+
+<router-outlet></router-outlet>
 
 <app-messages></app-messages>
