--- a/Angular/base-demo/src/app/app.component.html
+++ b/Angular/base-demo/src/app/app.component.html
@@ -19,6 +19,10 @@
   appUnless is set to false.
 </p>
 
+<p>The hero's birthday is {{ birthday | date: 'fullDate' | uppercase}} </p>
+
+<p>Super power boost: {{2 | strength: 1}}</p>
+
 <router-outlet></router-outlet>
 
 <app-messages></app-messages>
