--- a/Angular/base-demo/src/app/messages/messages.component.html
+++ b/Angular/base-demo/src/app/messages/messages.component.html
@@ -4,4 +4,6 @@
     <button class="clear" (click)="messageService.clear()">clear</button>
     <div *ngFor='let message of messageService.message'> {{message}} </div>
 
+    <input type="text" [(ngModel)]="hero">
+
 </div>
